# python

banco_de_dados/: README.md  pyproject.toml  script.py
cadstra aluno/: app.py  index.html  pega_posicao_mouse.py
preencher_bazzary/: pyproject.toml  script.py
