[project]
name = "banco-de-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "J0a0p3dr067",email = "pjpedro158@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "banco_de_dados", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
