[project]
name = "preencher-bazzary"
version = "0.1.0"
description = ""
authors = [
    {name = "J0a0p3dr067",email = "pjpedro158@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{include = "preencher_bazzary", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
